--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 pb-5 pt-3" style="background-image: url(/img/17877-warcraft-iii-reforged-story-campaign-backgrounds.jpg); background-size: cover;">
+            <div class="col-12 pb-5 pt-3" style="background-image: url(img/17877-warcraft-iii-reforged-story-campaign-backgrounds.jpg); background-size: cover;">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12">
@@ -33,16 +33,16 @@
                                 <span class="navbar-toggler-icon"></span>
                               </button>
                               <a class="navbar-brand mx-auto d-lg-none" href="#">
-                                <img src="/img/world-of-warcraft-logo-F6AAB54AD8-seeklogo.com.png" alt="WoW" style="width: 25px; height: 25px;">
+                                <img src="img/world-of-warcraft-logo-F6AAB54AD8-seeklogo.com.png" alt="WoW" style="width: 25px; height: 25px;">
                               </a>
                               <a href="#" class="d-lg-none account-icon"><i class="bi bi-person"></i></a>
                               <div class="collapse navbar-collapse" id="warcraftNavbar">
     
                                 <a class="navbar-brand d-none d-lg-block" href="#">
-                                  <img src="/img/blizzard.png" alt="Blizzard" style="width: 35px; height: 25px;">
+                                  <img src="img/blizzard.png" alt="Blizzard" style="width: 35px; height: 25px;">
                                 </a>
                                 <a class="navbar-brand d-none d-lg-block" href="#">
-                                  <img src="/img/world-of-warcraft-logo-F6AAB54AD8-seeklogo.com.png" alt="WoW" style="width: 25px; height: 25px;">
+                                  <img src="img/world-of-warcraft-logo-F6AAB54AD8-seeklogo.com.png" alt="WoW" style="width: 25px; height: 25px;">
                                 </a>
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                   <li class="nav-item dropdown">
@@ -99,7 +99,7 @@
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center">
                           
-                            <img src="/img/World-of-Warcraft-Logo-2004-present (1).png" alt="" style="width: 325px; height: 125px;">
+                            <img src="img/World-of-Warcraft-Logo-2004-present (1).png" alt="" style="width: 325px; height: 125px;">
                             <h1>THE UNDERMINE(D) CONTENT UPDATE IS NOW LIVE!</h1>
                             <h5>Travel deep into the goblin city of Undermine and learn to D.R.I.V.E., join a cartel, adventure in two new delves, a new dungeon: Operation Floodgate, face Gallywix in the Liberation of Undermine raid, battle in a new PvP Arena— and more!</h5>
                             <button class="btn btn-danger text-warning"style="border-radius: 0;">Subcribe Today</button>
@@ -124,7 +124,7 @@
             <div class="col-8 col-sm-6 col-md-3 px-2  ">
                 <a href="" class="text-decoration-none text-dark">
                     <div class="card">
-                        <img src="/img/bread.jpg" class="card-img-top" alt="...">
+                        <img src="img/bread.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
@@ -134,7 +134,7 @@
               <div class="col-8 col-sm-6 col-md-3 px-2">
                 <a href="" class="text-decoration-none text-dark">
                     <div class="card">
-                        <img src="/img/bread.jpg" class="card-img-top" alt="...">
+                        <img src="img/bread.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
@@ -144,7 +144,7 @@
               <div class="col-8 col-sm-6 col-md-3 px-2">
                     <a href="" class="text-decoration-none text-dark">
                         <div class="card">
-                            <img src="/img/bread.jpg" class="card-img-top" alt="...">
+                            <img src="img/bread.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
@@ -154,7 +154,7 @@
               <div class="col-8 col-sm-6 col-md-3 px-2">
                 <a href="" class="text-decoration-none text-dark">
                     <div class="card">
-                        <img src="/img/bread.jpg" class="card-img-top" alt="...">
+                        <img src="img/bread.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
@@ -173,9 +173,9 @@
        <div class="row">
         <div class="col-12 p-0">
             <div class="d-block d-sm-none">
-              <img src="/img/img1.png" class="img-fluid w-100" alt="Background" />
+              <img src="img/img1.png" class="img-fluid w-100" alt="Background" />
             </div>
-            <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img1.png'); background-size: cover; min-height: 300px;">
+            <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img1.png'); background-size: cover; min-height: 300px;">
               <div class="col-sm-6 text-white p-4">
                 <h5>HEIGHTEN YOUR EXPERIENCE</h5>
                 <h3>Rediscover Pure Adventure</h3>
@@ -205,9 +205,9 @@
     <div class="row">
      <div class="col-12 p-0">
          <div class="d-block d-sm-none">
-           <img src="/img/img2.png" class="img-fluid w-100" alt="Background" />
+           <img src="img/img2.png" class="img-fluid w-100" alt="Background" />
          </div>
-         <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img2.png'); background-size: cover; min-height: 300px; ">
+         <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img2.png'); background-size: cover; min-height: 300px; ">
            <div class="col-sm-6 text-white p-4">
              <h5>HEIGHTEN YOUR EXPERIENCE</h5>
              <h3>Rediscover Pure Adventure</h3>
@@ -237,9 +237,9 @@
     <div class="row">
      <div class="col-12 p-0">
          <div class="d-block d-sm-none">
-           <img src="/img/img3.png" class="img-fluid w-100" alt="Background" />
+           <img src="img/img3.png" class="img-fluid w-100" alt="Background" />
          </div>
-         <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img3.png'); background-size: cover;  ">
+         <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img3.png'); background-size: cover;  ">
            <div class="col-sm-6 text-white p-4">
              <h5>HEIGHTEN YOUR EXPERIENCE</h5>
              <h3>Rediscover Pure Adventure</h3>
@@ -269,9 +269,9 @@
     <div class="row">
      <div class="col-12 p-0">
          <div class="d-block d-sm-none">
-           <img src="/img/img4.png" class="img-fluid w-100" alt="Background" />
+           <img src="img/img4.png" class="img-fluid w-100" alt="Background" />
          </div>
-         <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img4.png'); background-size: cover; min-height: 300px;">
+         <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img4.png'); background-size: cover; min-height: 300px;">
            <div class="col-sm-6 text-white p-4">
              <h5>HEIGHTEN YOUR EXPERIENCE</h5>
              <h3>Rediscover Pure Adventure</h3>
@@ -301,9 +301,9 @@
     <div class="row">
      <div class="col-12 p-0">
          <div class="d-block d-sm-none">
-           <img src="/img/img5.png" class="img-fluid w-100" alt="Background" />
+           <img src="img/img5.png" class="img-fluid w-100" alt="Background" />
          </div>
-         <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img5.png'); background-size: cover;min-height: 300px;">
+         <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img5.png'); background-size: cover;min-height: 300px;">
            <div class="col-sm-6 text-white p-4">
              <h5>HEIGHTEN YOUR EXPERIENCE</h5>
              <h3>Rediscover Pure Adventure</h3>
@@ -335,9 +335,9 @@
     <div class="row">
      <div class="col-12 p-0">
          <div class="d-block d-sm-none">
-           <img src="/img/img6.png" class="img-fluid w-100" alt="Background" />
+           <img src="img/img6.png" class="img-fluid w-100" alt="Background" />
          </div>
-         <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img6.png'); background-size: cover; min-height: 300px;">
+         <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img6.png'); background-size: cover; min-height: 300px;">
            <div class="col-sm-6 text-white p-4">
              <h5>HEIGHTEN YOUR EXPERIENCE</h5>
              <h3>Rediscover Pure Adventure</h3>
@@ -367,9 +367,9 @@
        <div class="row">
         <div class="col-12 p-0">
             <div class="d-block d-sm-none">
-              <img src="/img/img8.png" class="img-fluid w-100" alt="Background" />
+              <img src="img/img8.png" class="img-fluid w-100" alt="Background" />
             </div>
-            <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img8.png'); background-size: cover;  min-height: 300px;">
+            <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img8.png'); background-size: cover;  min-height: 300px;">
               <div class="col-sm-6 text-white p-4">
                 <h5>HEIGHTEN YOUR EXPERIENCE</h5>
                 <h3>Rediscover Pure Adventure</h3>
@@ -400,7 +400,7 @@
         <div class="col-12 col-sm-6 mt-2">
             <a href=""class="text-decoration-none text-dark">
                 <div class="card" >
-                    <img src="/img/pic1.png" class="card-img-top" alt="...">
+                    <img src="img/pic1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -410,7 +410,7 @@
         <div class="col-12 col-sm-6 mt-2">
             <a href=""class="text-decoration-none text-dark">
                 <div class="card" >
-                    <img src="/img/pic1.png" class="card-img-top" alt="...">
+                    <img src="img/pic1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -424,7 +424,7 @@
         <div class="col-12 col-sm-6 mt-2">
             <a href=""class="text-decoration-none text-dark">
                 <div class="card" >
-                    <img src="/img/pic2.png" class="card-img-top" alt="...">
+                    <img src="img/pic2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -434,7 +434,7 @@
         <div class="col-12 col-sm-6 mt-2">
             <a href=""class="text-decoration-none text-dark">
                 <div class="card" >
-                    <img src="/img/pic2.png" class="card-img-top" alt="...">
+                    <img src="img/pic2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
@@ -447,9 +447,9 @@
     <div class="row">
      <div class="col-12 p-0">
          <div class="d-block d-sm-none">
-           <img src="/img/img10.png" class="img-fluid w-100" alt="Background" />
+           <img src="img/img10.png" class="img-fluid w-100" alt="Background" />
          </div>
-         <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img10.png'); background-size: cover;  min-height: 300px;">
+         <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img10.png'); background-size: cover;  min-height: 300px;">
            <div class="col-sm-6 text-white p-4">
              <h5>HEIGHTEN YOUR EXPERIENCE</h5>
              <h3>Rediscover Pure Adventure</h3>
@@ -479,9 +479,9 @@
        <div class="row">
         <div class="col-12 p-0">
             <div class="d-block d-sm-none">
-              <img src="/img/img11.png" class="img-fluid w-100" alt="Background" />
+              <img src="img/img11.png" class="img-fluid w-100" alt="Background" />
             </div>
-            <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/img11.png'); background-size: cover;  min-height: 300px;">
+            <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/img11.png'); background-size: cover;  min-height: 300px;">
               <div class="col-sm-6 text-white p-4">
                 <h5>HEIGHTEN YOUR EXPERIENCE</h5>
                 <h3>Rediscover Pure Adventure</h3>
@@ -512,11 +512,11 @@
       <div class="col-12 p-0">
         <!-- Small screen image -->
         <div class="d-block d-sm-none">
-          <img src="/img/17877-warcraft-iii-reforged-story-campaign-backgrounds.jpg" class="img-fluid w-100" alt="Background" />
+          <img src="img/17877-warcraft-iii-reforged-story-campaign-backgrounds.jpg" class="img-fluid w-100" alt="Background" />
         </div>
   
         <!-- Medium and up: background image with text overlay -->
-        <div class="d-none d-sm-flex align-items-center" style="background-image: url('/img/17877-warcraft-iii-reforged-story-campaign-backgrounds.jpg'); background-size: cover; min-height: 300px;">
+        <div class="d-none d-sm-flex align-items-center" style="background-image: url('img/17877-warcraft-iii-reforged-story-campaign-backgrounds.jpg'); background-size: cover; min-height: 300px;">
           <div class="col-sm-6 text-white p-4">
             <h5>HEIGHTEN YOUR EXPERIENCE</h5>
             <h3>Rediscover Pure Adventure</h3>
@@ -584,7 +584,7 @@
 
   <div class="row">
   
-        <div class="col-2"><img src="/img/blizzard.png" style="width: 75px; height: 60px;"></div>
+        <div class="col-2"><img src="img/blizzard.png" style="width: 75px; height: 60px;"></div>
         <div class="col-8 text-white pt-4">©2025 Blizzard Entertainment, Inc.
           All trademarks referenced herein are the properties of their respective owners.</div>
 
